--- a/umbrel-community-app-store-master/pyblock/docker-compose.yml
+++ b/umbrel-community-app-store-master/pyblock/docker-compose.yml
@@ -1,12 +1,12 @@
-version: "3.7"
+version: "Latest"
 
 services:
 
   app_proxy:
     environment:
       # The format here is: <app-id>_<docker-service-name>_1
-      APP_HOST: sparkles-hello-world_server_1
-      APP_PORT: 3000
+      APP_HOST: pyblock_server_1
+      APP_PORT: 6969
     
   server:
     image: getumbrel/community-app-store-hello-world:latest
